2014-03-14 Erwin Waterlander <waterlan@xs4all.nl>
	* man/man1/Makefile: Generate pod files from gettext
	  po files with po4a, for easier translation. Thanks to
	  Mario Blätterman.
	  See also http://po4a.alioth.debian.org/
	* man/nl/man1/dos2unix.po, man/es/man/dos2unix.po:
	  New po files, created from original pod.
	  Thanks to Mario Blätterman.
	* man/nl/man1/dos2unix.pod, man/es/man/dos2unix.pod:
	  Deleted. These are generated now.
	* Makefile: Update for manual generation from .po files.
	* Makefile, man/man1/Makefile: All man pages are now in
	  UTF-8 format.
	* Makefile: EO_XNOTATION no longer supported.
	* po/eo-x.po: Deleted.

2014-03-14 mail6543210 <mail6543210@yahoo.com.tw>
	* po/zh_TW.po: New Chinese (traditional) translation.

2014-03-06 Thomas Pryds <thomas@pryds.eu>
	* po/da.po: New Danish translation.

2014-03-06 Мирослав Николић <miroslavnikolic@rocketmail.com>
	* po/sr.po: New Serbian translation.

2014-02-24 Frédéric Marchal <fmarchal@perso.be>
	* po/fr.po: New French translation.

2014-02-05 Erwin Waterlander <waterlan@xs4all.nl>
	* README.txt: List all the new translators.
	* Makefile: New target 'getpo' to get .po file from the
	  Translation Project. New target po/eo-x.po to generate
	  eo-x.po from eo.po.

2014-02-05 Enrico Nicoletto <liverig@gmail.com>
	* po/pt_BR.po: New Brazilian Portuguese translation

2014-02-05 Jakub Bogusz <qboosh@pld-linux.org>
	* po/pl.po: New Polish translation

2014-02-05 Yuri Chornoivan <yurchor@ukr.net>
	* po/uk.po: New Ukrainian translation

2014-02-05 Trần Ngọc Quân <vnwildman@gmail.com>
	* po/vi.po: New Vietnamese translation

2014-02-05 Benno Schulenberg <benno@vertaalt.nl>
	* po/nl.po: Updated Dutch translation
	* po/eo.po: Updated Esperanto translation

2014-02-02 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c: Print help and version info to stdout iso stderr.
	  Thanks to Benno Schulenberg.

2014-01-31 Erwin Waterlander <waterlan@xs4all.nl>
	* *.c,po/*.po: cleanup messages. Thanks to Benno Schulenberg.
