@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 6.0.5-beta7
-DOS2UNIX_VERSION_SHORT = 605b7
-DOS2UNIX_DATE = 2014-03-14
+DOS2UNIX_VERSION = 6.0.5-beta8
+DOS2UNIX_VERSION_SHORT = 605b8
+DOS2UNIX_DATE = 2014-03-15
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
